styles/styles.css
input[type="button"] {
    width: 100%;
    border: 0px;
    border-radius: 15px;
    background: linear-gradient(145deg, #ecdfc3, #967326);
    box-shadow: 2px 2px 4px #2f240d,
        inset 0px 0px 4px rgba(0, 0, 0, 0.427);
    padding: 5px 0px;
    font-size: 90%;
}

input[type="button"]:hover {
    cursor: pointer;
    font-weight: bold;
    background: linear-gradient(145deg, #f9ecce, #d5a235);
    box-shadow: inset 2px 2px 8px #b9af9a,
        inset -2px -2px 8px #69501a,
        2px 2px 4px #2f240d,
        inset 0px 0px 4px rgba(0, 0, 0, 0.427);
}

input[type="button"]:disabled,
input[type="button"]:hover:disabled {
    cursor: auto;
    font-weight: inherit;
    background: linear-gradient(145deg, #c5baa3, #70551c);
    box-shadow: 2px 2px 4px #2f240d,
        inset 0px 0px 4px rgba(0, 0, 0, 0.427);
}

input[type="radio"],
input[type="radio"]+label {
    cursor: pointer;
}

input[type="checkbox"],
input[type="checkbox"]+label {
    cursor: pointer;
}

input[type="checkbox"]:disabled,
input[type="checkbox"]:disabled+label {
    cursor: default;
}

.number_field {
    width: 100%;
    text-align: right;
    padding: 5px;
    height: 35px;
    border-radius: 10px;
    box-shadow: inset 5px 5px 4px #66635c,
        inset -5px -5px 4px #fdecd8,
        -2px -2px 4px 2px rgba(0, 0, 0, 0.427),
        2px 2px 4px 2px rgba(254, 237, 237, 0.607);
}

@font-face {
    font-family: 'Quivira';
    src: url("Quivira.otf") format("opentype");
}

body {
    font-family: 'Quivira';
    margin: auto;
    min-height: 100%;
    display: flex;
    flex-direction: column;
    background-color: #fff2db;
    overflow-x: hidden;
    min-width: 0px;
}

.roman_display {
    background-color: #f7e2d0;
}

.arabic_display {
    background-color: #d0f2d0;
}

.word_display {
    background-color: #ded3f5;
}

h1 {
    margin: 0px 0px 20px;
    padding: 20px;
    background-color: #fce3b7;
    text-align: center;
    font-variant: small-caps;
    color: #3a2c0d;
}

details>summary:hover {
    cursor: pointer;
}

.frac {
    display: inline-block;
    text-align: center;
    vertical-align: middle;
    font-size: 80%;
}

.frac>sup {
    display: block;
    border-bottom: 1px solid;
}

.frac>sub {
    display: block;
}

#calc {
    background: linear-gradient(145deg, #f0f0f0, #b59867);
    border-radius: 10px;
    padding: 10px 20px;
    table-layout: fixed;
    width: 300px;
    margin: 0 auto;
    /* border: 8px outset #ffe9c0; */
    box-shadow: 5px 5px 9px #303030ae,
        inset -2px -2px 5px 2px rgba(0, 0, 0, 0.525),
        inset 2px 2px 5px 2px rgba(255, 255, 255, 0.5);
    border-collapse: separate;
    border-spacing: 0 10px;
}

#calc-container {
    margin: 0 auto;
    width: fit-content;
}

#settings {
    position: absolute;
    z-index: 1;
    left: -1000px;
    overflow-x: hidden;
    transition: 0.2s;
}

#legend {
    position: absolute;
    z-index: 1;
    overflow-x: hidden;
    transition: 0.2s;
    right: -1000px;
}

#legend>.slider>fieldset {
    margin: 0px 5px 5px;
    border-radius: 5px;
}

#wrapper {
    padding-bottom: 20px;
    flex-grow: 1;
}

#footer {
    padding: 0px 20px;
    background-color: #dacdbd;
    right: 0;
    bottom: 0;
    left: 0;
    font-size: 90%;
}

.trigger>img {
    width: 24px;
    height: 24px;
    position: absolute;
    top: 50%;
    left: 50%;
    margin: -12px 0 0 -12px;
}

.trigger {
    display: inline-block;
    cursor: pointer;
    vertical-align: top;
    width: 30px;
    height: 30px;
    border-radius: 7px;
    position: relative;
}

.trigger:hover {
    background-color: rgba(175, 175, 175, 0.45);
}

.slider {
    display: inline-block;
    /* From https://css.glass */
    background: rgba(228, 175, 78, 0.39);
    border-radius: 16px;
    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
    backdrop-filter: blur(6.2px);
    -webkit-backdrop-filter: blur(6.2px);
    border: 1px solid rgba(239, 119, 35, 0.45);
}

html {
    height: 100%;
    font-size: 110%;
}

legend {
    font-variant: small-caps;
}

#settings>.slider>fieldset {
    margin: 0px 5px;
    border-radius: 5px;
}

input[type="checkbox"],
input[type="radio"] {
    accent-color: rgb(159, 95, 75);
}

